@@ -39,7 +39,7 @@ AC_HEADER_TIME
 AC_C_CONST
 dnl Checks for library functions.
 AC_CHECK_FUNCS(asprintf gettimeofday mkdir)
-ALL_LINGUAS="ja_JP.eucJP"
+ALL_LINGUAS="ja"
 AM_GNU_GETTEXT
 AC_OUTPUT(Makefile intl/Makefile \
 include/Makefile lib/Makefile bin/Makefile \
