@@ -1,3 +1,11 @@
+2002-04-30  gettextize  <bug-gnu-utils@gnu.org>
+
+	* Makefile.in.in: Upgrade to gettext-0.10.40.
+
+2002-04-30  Kaz Sasayama  <Kaz.Sasayama@Hypercore.co.jp>
+
+	* ja.po: Renamed from ja_JP.eucJP.po.
+
 2002-04-23  gettextize  <bug-gnu-utils@gnu.org>
 
 	* Makefile.in.in: Upgrade to gettext-0.10.40.
